--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,16 +1,36 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
 updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "frontend/" # Location of package manifests
+  - package-ecosystem: "npm"
+    directory: "frontend/"
     schedule:
       interval: "daily"
-  - package-ecosystem: "pip" # See documentation for possible values
-    directory: "backend/" # Location of package manifests
+      time: "08:00"
+    target-branch: "master"
+    reviewers:
+      - "RuiMoreira1"
+  - package-ecosystem: "pip"
+    directory: "backend/"
     schedule:
       interval: "daily"
+      time: "08:00"
+    target-branch: "master"
+    reviewers:
+      - "RuiMoreira1"
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: "daily"
+      time: "08:00"
+    target-branch: "master"
+    reviewers:
+      - "RuiMoreira1"
+  - package-ecosystem: "composer"
+    directory: "/"
+    schedule:
+      interval: "daily"
+      time: "08:00"
+    target-branch: "master"
+    reviewers:
+      - "RuiMoreira1"
+  
      
